fixed contrast issues

--- a/styles/small.css
+++ b/styles/small.css
@@ -111,7 +111,7 @@ img {
 }
 
 button {
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
   color: white;
   border: none;
   border-radius: 5px;
